<resources>
    <string name="app_name">FTP client</string>
    <string name="host_label">Host</string>
    <string name="user_label">User</string>
    <string name="password_label">Password</string>
    <string name="settings_check_btn">Test connection</string>
    <string name="upload_btn">Select file to upload</string>
    <string name="exit_btn">Exit</string>
    <string name="host_hint">Enter hostname or IP address</string>
    <string name="user_hint">Enter user login</string>
    <string name="password_hint">Enter user password</string>
    <string name="channel_name">FTP Client</string>
    <string name="channel_description">Application for upload files to FTP</string>
    <string name="check_success_msg">Successfully connected.</string>
    <string name="check_msg_title">Connection check</string>
    <string name="check_error_msg">Can\'t connect to host %1$s and port %2$s with login %3$s.</string>
    <string name="item_settings_title">Settings</string>
    <string name="settings_activity_label">FTP Client settings</string>
    <string name="port_label">Port</string>
    <string name="port_default">21</string>
    <string name="port_hint">Enter port number</string>
    <string name="settings_save_btn">Save</string>
    <string name="settings_save_message">Settings saved.</string>
    <string name="filedlg_title">Select file</string>
    <string name="upload_activity_label">Upload</string>
    <string name="upload_accept_btn">Start upload</string>
    <string name="upload_cancel_btn">Cancel upload</string>
    <string name="upload_success_msg">Upload successfull.</string>
    <string name="upload_error_msg">Upload failure.</string>
</resources>
